@@ -1,13 +1,13 @@
 /* cygtls.h
 
-   Copyright 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013
-   Red Hat, Inc.
+   Copyright 2003, 2004, 2005, 2008, 2009, 2010 Red Hat, Inc.
 
 This software is a copyrighted work licensed under the terms of the
 Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
-#pragma once
+#ifndef _CYGTLS_H
+#define _CYGTLS_H
 
 #include <signal.h>
 #include <pwd.h>
@@ -82,6 +82,9 @@ struct _local_storage
   char *namearray[2];
   int grp_pos;
 
+  /* console.cc */
+  unsigned rarg;
+
   /* dlfcn.cc */
   int dl_error;
   char dl_buffer[256];
@@ -108,18 +111,26 @@ struct _local_storage
     HANDLE *w4;				// note: malloced
   } select;
 
-  /* strerror errno.cc */
-  char strerror_buf[sizeof ("Unknown error -2147483648")];
-  char strerror_r_buf[sizeof ("Unknown error -2147483648")];
+  /* strerror */
+  char strerror_buf[sizeof ("Unknown error 4294967295")];
+
+  /* sysloc.cc */
+  wchar_t *process_ident;		// note: malloced
+  int process_logopt;
+  int process_facility;
+  int process_logmask;
 
   /* times.cc */
   char timezone_buf[20];
+  struct tm _localtime_buf;
 
-  /* strsig.cc */
-  char signamebuf[sizeof ("Unknown signal 4294967295   ")];
+  /* uinfo.cc */
+  char username[UNLEN + 1];
 
   /* net.cc */
   char *ntoa_buf;			// note: malloced
+  char signamebuf[sizeof ("Unknown signal 4294967295   ")];
+
   unionent *hostent_buf;		// note: malloced
   unionent *protoent_buf;		// note: malloced
   unionent *servent_buf;		// note: malloced
@@ -131,12 +142,8 @@ struct _local_storage
   int setmode_file;
   int setmode_mode;
 
-  /* thread.cc */
-  HANDLE cw_timer;
-
   /* All functions requiring temporary path buffers. */
   tls_pathbuf pathbufs;
-  char ttybuf[32];
 };
 
 typedef struct struct_waitq
@@ -158,7 +165,6 @@ typedef struct struct_waitq
 
 /*gentls_offsets*/
 #include "cygerrno.h"
-#include "security.h"
 
 extern "C" int __sjfault (jmp_buf);
 extern "C" int __ljfault (jmp_buf, int);
@@ -170,29 +176,27 @@ typedef __uint32_t __stack_t;
 class _cygtls
 {
 public:
-  /* Please keep these two declarations first */
-  struct _local_storage locals;
+  void (*func) /*gentls_offsets*/(int)/*gentls_offsets*/;
+  int saved_errno;
+  int sa_flags;
+  sigset_t oldmask;
+  sigset_t deltamask;
+  HANDLE event;
+  int *errno_addr;
+  sigset_t sigmask;
+  sigset_t sigwait_mask;
+  siginfo_t *sigwait_info;
+  struct ucontext thread_context;
+  DWORD thread_id;
+  unsigned threadkill;
+  siginfo_t infodata;
+  struct pthread *tid;
   union
   {
     struct _reent local_clib;
     char __dontuse[8 * ((sizeof(struct _reent) + 4) / 8)];
   };
-  /**/
-  void (*func) /*gentls_offsets*/(int, siginfo_t *, void *)/*gentls_offsets*/;
-  int saved_errno;
-  int sa_flags;
-  sigset_t oldmask;
-  sigset_t deltamask;
-  int *errno_addr;
-  sigset_t sigmask;
-  sigset_t sigwait_mask;
-  siginfo_t *sigwait_info;
-  HANDLE signal_arrived;
-  bool will_wait_for_signal;
-  struct ucontext thread_context;
-  DWORD thread_id;
-  siginfo_t infodata;
-  struct pthread *tid;
+  struct _local_storage locals;
   class cygthread *_ctinfo;
   class san *andreas;
   waitq wq;
@@ -205,58 +209,44 @@ public:
   unsigned initialized;
 
   /*gentls_offsets*/
+  static CRITICAL_SECTION protect_linked_list;
+  static void init ();
   void init_thread (void *, DWORD (*) (void *, void *));
   static void call (DWORD (*) (void *, void *), void *);
+  static struct _cygtls *find_tls (int sig);
   void remove (DWORD);
-  void push (__stack_t addr) {*stackptr++ = (__stack_t) addr;}
-  __stack_t __reg1 pop ();
+  void push (__stack_t) __attribute__ ((regparm (2)));
+  __stack_t pop () __attribute__ ((regparm (1)));
   __stack_t retaddr () {return stackptr[-1];}
   bool isinitialized () const
   {
     return initialized == CYGTLS_INITIALIZED;
   }
-  bool __reg3 interrupt_now (CONTEXT *, siginfo_t&, void *, struct sigaction&);
-  void __reg3 interrupt_setup (siginfo_t&, void *, struct sigaction&);
+  bool interrupt_now (CONTEXT *, int, void *, struct sigaction&)
+    __attribute__((regparm(3)));
+  void __stdcall interrupt_setup (int sig, void *handler,
+				  struct sigaction& siga)
+    __attribute__((regparm(3)));
 
   bool inside_kernel (CONTEXT *);
-  void __reg2 copy_context (CONTEXT *);
-  void __reg2 signal_debugger (int);
+  void signal_exit (int) __attribute__ ((noreturn, regparm(2)));
+  void copy_context (CONTEXT *) __attribute__ ((regparm(2)));
+  void signal_debugger (int) __attribute__ ((regparm(2)));
 
 #ifdef CYGTLS_HANDLE
-  operator HANDLE () const {return tid ? tid->win32_obj_id : NULL;}
+  operator HANDLE () const {return tid->win32_obj_id;}
 #endif
-  int __reg1 call_signal_handler ();
-  void __reg1 remove_wq (DWORD);
-  void __reg1 fixup_after_fork ();
-  void __reg1 lock ();
-  void __reg1 unlock ();
-  bool __reg1 locked ();
-  HANDLE get_signal_arrived (bool wait_for_lock = true)
-  {
-    if (!signal_arrived)
-      {
-	if (wait_for_lock)
-	  lock ();
-	if (!signal_arrived)
-	  signal_arrived = CreateEvent (&sec_none_nih, false, false, NULL);
-	if (wait_for_lock)
-	  unlock ();
-      }
-    return signal_arrived;
-  }
-  void set_signal_arrived (bool setit, HANDLE& h)
-  {
-    if (!setit)
-      will_wait_for_signal = false;
-    else
-      {
-	h = get_signal_arrived ();
-	will_wait_for_signal = true;
-      }
-  }
-  void reset_signal_arrived () { will_wait_for_signal = false; }
+  void set_siginfo (struct sigpacket *) __attribute__ ((regparm (3)));
+  void set_threadkill () {threadkill = true;}
+  void reset_threadkill () {threadkill = false;}
+  int call_signal_handler () __attribute__ ((regparm (1)));
+  void remove_wq (DWORD) __attribute__ ((regparm (1)));
+  void fixup_after_fork () __attribute__ ((regparm (1)));
+  void lock () __attribute__ ((regparm (1)));
+  void unlock () __attribute__ ((regparm (1)));
+  bool locked () __attribute__ ((regparm (1)));
 private:
-  void __reg3 call2 (DWORD (*) (void *, void *), void *, void *);
+  void call2 (DWORD (*) (void *, void *), void *, void *) __attribute__ ((regparm (3)));
   /*gentls_offsets*/
 };
 #pragma pack(pop)
@@ -322,15 +312,6 @@ public:
   }
 };
 
-class set_signal_arrived
-{
-public:
-  set_signal_arrived (bool setit, HANDLE& h) { _my_tls.set_signal_arrived (setit, h); }
-  set_signal_arrived (HANDLE& h) { _my_tls.set_signal_arrived (true, h); }
-
-  operator int () const {return _my_tls.will_wait_for_signal;}
-  ~set_signal_arrived () { _my_tls.reset_signal_arrived (); }
-};
-
 #define __getreent() (&_my_tls.local_clib)
-/*gentls_offsets*/
+
+#endif /*_CYGTLS_H*/ /*gentls_offsets*/
